fixed best streak issue